--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -28,7 +28,12 @@
 <button id="btn2">Hello Again in blue!</button>
 <button id="btn3">Change item colors!</button>
 <button id="btn4">Change the paragraph!</button>
-
+<br>
+<br>
+<button id="btn5">Undo JavaScript!</button>
+<button id="btn6">Hello Again in black!</button>
+<button id="btn7">Change item colors back!</button>
+<button id="btn8">Change the paragraph back!</button>
 <script>
     (function() {
         "use strict";
@@ -39,10 +44,13 @@
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
 
         var listener = function (event) {
-            return mainHeader.innerHTML = "JavaScript is Cool";
+            return mainHeader.innerHTML = "JavaScript is Cool!";
+        };
+        var listener1 = function(event){
+            return mainHeader.innerHTML = "Hello World!";
         };
          document.getElementById('btn1').addEventListener('click', listener, false);
-
+        document.getElementById('btn5').addEventListener('click', listener1, false);
 
         // TODO: Uncomment the next line and get the sub header element by id
 
@@ -55,6 +63,10 @@
         };
         document.getElementById('btn2').addEventListener('click', listen, false);
 
+        var listen1 = function (event) {
+            return subHeader.style.color = "black";
+        };
+        document.getElementById('btn6').addEventListener('click', listen1, false);
 
         // TODO: Uncomment the next line and get all list items
 
@@ -70,6 +82,11 @@
         };
         document.getElementById('btn3').addEventListener('click', list, false);
 
+        var list1 = function (event) {
+            return listItems[1].style.color = "black", listItems[3].style.color = "black", listItems[0].style.color = "black";
+        };
+        document.getElementById('btn7').addEventListener('click', list1, false);
+
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
 
          var subParagraphs = document.getElementsByClassName("sub-paragraph");
@@ -80,6 +97,11 @@
             return subParagraphs[0].innerText = "Mission Accomplished!";
         };
         document.getElementById('btn4').addEventListener('click', lis, false);
+
+        var lis1 = function (event) {
+            return subParagraphs[0].innerText = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        };
+        document.getElementById('btn8').addEventListener('click', lis1, false);
 
     })();
 </script>
