--- a/konami.html
+++ b/konami.html
@@ -6,20 +6,56 @@
 <body>
 <h1>Konami Code</h1>
 <p> Please enter your code: </p>
-<form>
-    <input type="text" id="textfield" name="textfield" placeholder="Type Code Here"/>
-</form>
+
 <script src="js/jquery-2.2.4.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script>
     "use strict";
-    $('#textfield').keyup(function() {
-       var codeSound= new Audio('img/439890__simonbay__lushlife-gameover.wav');
-       codeSound.play();
+    // a key map of allowed keys
+    var allowedKeys = {
+        37: 'left',
+        38: 'up',
+        39: 'right',
+        40: 'down',
+        65: 'a',
+        66: 'b'
+    };
+
+    // the 'official' Konami Code sequence
+    var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
+
+    // a variable to remember the 'position' the user has reached so far.
+    var konamiCodePosition = 0;
+
+    // add keydown event listener
+    document.addEventListener('keydown', function(e) {
+        // get the value of the key code from the key map
+        var key = allowedKeys[e.keyCode];
+        // get the value of the required key from the konami code
+        var requiredKey = konamiCode[konamiCodePosition];
+
+        // compare the key with the required key
+        if (key == requiredKey) {
+
+            // move to the next key in the konami code sequence
+            konamiCodePosition++;
+
+            // if the last key is reached, activate cheats
+            if (konamiCodePosition == konamiCode.length) {
+                activateCheats();
+                konamiCodePosition = 0;
+            }
+        } else {
+            konamiCodePosition = 0;
+        }
+    });
+
+    function activateCheats() {
+        new Audio();
         alert('You have added 30 lives!');
         $('h1').css({'background-image':'url("img/KONAMI.jpeg")','height':'200px', "opacity":'.7', 'background-repeat':"no-repeat", 'background-size':'cover', 'margin':'0'});
         $('body').css({'background-image': 'url("img/konami-logo.0.0.jpg")', 'background-repeat':"no-repeat", 'background-size':'cover', 'color':'yellow'});
-    });
+    };
     $(document).keyup(function(event){
         console.log(event.keyCode);
     });
